# SkyLens

./: .gitignore  README.md  client.py  extractions_in_threads.py  frames_metadata.txt  matrix.py  pyproject.toml  requirements.txt  server.py  utils.py
backend/: README.md  app.py  pyproject.toml  requirements.txt  ruff.toml
backend/src/: logic.py  matrix.py  utils.py
frontend/: README.md  index.html  package-lock.json  package.json  v.html
frontend-app/: package-lock.json
frontend-app/src/: App.css  App.tsx  api.ts  types.ts
frontend/src/: App.css  App.tsx  api.ts  index.tsx  types.ts  utils.ts
frontend/src/components/: FileItem.tsx  FileUploader.tsx  GalleryModal.tsx  Notification.tsx  StackedImagesGallery.tsx  StatsBar.tsx  UploadProgress.tsx
frontend/src/pages/: ResultPage.tsx  UploadPage.tsx
